my-promises-app: tagging a commit

--- a/my-promises/www/app/components/main/principalView.html
+++ b/my-promises/www/app/components/main/principalView.html
@@ -13,7 +13,7 @@
                 <ons-icon icon="md-menu"></ons-icon>
               </ons-toolbar-button>
             </div>
-            <div class="center">Messages</div>
+            <div class="center">Promises</div>
             
             <div class="right">
               <ons-toolbar-button ng-click="app.messages.toggleMenu()" modifier="quiet" style="padding: 2px; top: 10px; ">
