--- a/my-promises/www/app/components/main/principalView.html
+++ b/my-promises/www/app/components/main/principalView.html
@@ -13,33 +13,17 @@
                 <ons-icon icon="md-menu"></ons-icon>
               </ons-toolbar-button>
             </div>
-            <div class="center">Promises</div>
-            
-            <div class="right">
-              <ons-toolbar-button ng-click="app.messages.toggleMenu()" modifier="quiet" style="padding: 2px; top: 10px; ">
-                <ons-icon icon="fa-weixin" style="font-size: 24px;"></ons-icon>
-                <span class="notification" style="left: -10px;">5</span>
-              </ons-toolbar-button>
-            </div>
+            <div class="center">Promesas</div>
+
         </ons-toolbar>
         
         <ons-tabbar position="bottom">
-          <ons-tab page="app/components/messages/messagesView.html" label="Home" icon="fa-home" active="true" style="width: 55px; top: 10px" persistent>
-              <ons-icon icon="fa-home" style="font-size: 26px;"><div style="font-size: 10px;">Home</div></ons-icon>
+          <ons-tab page="app/components/promise/promiseView.html" label="Home" icon="fa-home" active="true" style="width: 55px; top: 10px" persistent>
+              <ons-icon icon="fa-home" style="font-size: 26px;"><div style="font-size: 10px;">Inicio</div></ons-icon>
               <span class="smallNotification" style="left: -10px;" ng-show="newCheckins > 0"></span>
           </ons-tab>
             
-          <ons-tab page="app/components/requests/requestsView.html" label="Requests" icon="fa-users" style="width: 65px; top: 10px">
-              <ons-icon icon="fa-users" style="font-size: 26px;"><div style="font-size: 10px;">Requests</div></ons-icon>
-              <span class="notification" style="left: -15px;">5</span>
-          </ons-tab>
-          
-          <ons-tab page="app/components/notifications/notificationsView.html" label="Notifications" icon="fa-info-circle"  style="width: 65px; top: 10px">
-              <ons-icon icon="fa-info-circle" style="font-size: 26px;"><div style="font-size: 10px;">Notifications</div></ons-icon>
-              <span class="notification" style="left: -15px;">5</span>
-          </ons-tab>
-        
-          <ons-tab page="app/components/notifications/notificationsView.html" label="Profile" icon="fa-user" style="width: 50px"></ons-tab>
+
           
         </ons-tabbar>
         
