my-day-app: Plugin para el social sharing facebook

--- a/my-promises/www/app/components/promise/promiseView.html
+++ b/my-promises/www/app/components/promise/promiseView.html
@@ -20,9 +20,9 @@
      <ons-col>
         <ons-row>
            <!-- todo Buscar la manera de compartir-->
-           <ons-col><ons-icon icon="ion-social-facebook"></ons-icon></ons-col>
-           <ons-col><ons-icon icon="ion-social-google"></ons-icon></ons-col>
-           <ons-col><ons-icon icon="ion-paper-airplane"></ons-icon></ons-col>
+           <ons-col><ons-icon icon="ion-social-facebook" data-ng-click="Share('fb')"></ons-icon></ons-col>
+           <ons-col><ons-icon icon="ion-social-twitter" data-ng-click="Share('tw')"></ons-icon></ons-col>
+           <ons-col><ons-icon icon="ion-paper-airplane" data-ng-click="Share('sms')"></ons-icon></ons-col>
         </ons-row>
      </ons-col>
    </ons-row>
