--- a/my-promises/platforms/browser/www/app/components/main/principalView.html
+++ b/my-promises/platforms/browser/www/app/components/main/principalView.html
@@ -3,8 +3,8 @@
     <ons-modal var="modal" ng-click="modal.hide()" style="z-index: 999">
       <ons-icon icon="ion-load-c" spin="true"></ons-icon>
       <br>
-      <br> Please wait.
-      <br> Loading...
+      <br> Por favor espere.
+      <br> Cargando...
     </ons-modal>
         
         <ons-toolbar>
@@ -20,9 +20,11 @@
         <ons-tabbar position="bottom">
           <ons-tab page="app/components/promise/promiseView.html" label="Home" icon="fa-home" active="true" style="width: 55px; top: 10px" persistent>
               <ons-icon icon="fa-home" style="font-size: 26px;"><div style="font-size: 10px;">Inicio</div></ons-icon>
-              <span class="smallNotification" style="left: -10px;" ng-show="newCheckins > 0"></span>
+              <span class="smallNotification" style="left: -10px;" data-ng-show="newCheckins > 0"></span>
           </ons-tab>
-            
+        <ons-tab page="app/components/psalm/psalmView.html" label="Salmos" icon="ion-ios-book" active="true" style="width: 55px; top: 10px" persistent>
+            <ons-icon icon="ion-ios-book" style="font-size: 26px;"><div style="font-size: 10px;">Salmos</div></ons-icon>
+        </ons-tab>
 
           
         </ons-tabbar>
