--- a/my-promises/platforms/browser/www/app/components/promise/promiseView.html
+++ b/my-promises/platforms/browser/www/app/components/promise/promiseView.html
@@ -16,5 +16,15 @@
          <div class="center" data-ng-show="isLoadind"><ons-icon icon="ion-load-c" spin="true" ></ons-icon></div>
       </ons-col>
    </ons-row>
+   <ons-row>
+     <ons-col>
+        <ons-row>
+           <!-- todo Buscar la manera de compartir-->
+           <ons-col><ons-icon icon="ion-social-facebook" data-ng-click="Share('fb')"></ons-icon></ons-col>
+           <ons-col><ons-icon icon="ion-social-twitter" data-ng-click="Share('tw')"></ons-icon></ons-col>
+           <ons-col><ons-icon icon="ion-paper-airplane" data-ng-click="Share('sms')"></ons-icon></ons-col>
+        </ons-row>
+     </ons-col>
+   </ons-row>
 
 </ons-page>
