--- a/my-promises/www/app/components/main/principalView.html
+++ b/my-promises/www/app/components/main/principalView.html
@@ -25,8 +25,12 @@
         <ons-tab page="app/components/psalm/psalmView.html" label="Salmos" icon="ion-ios-book" active="true" style="width: 55px; top: 10px" persistent>
             <ons-icon icon="ion-ios-book" style="font-size: 26px;"><div style="font-size: 10px;">Salmos</div></ons-icon>
         </ons-tab>
+            <ons-tab page="app/components/about/aboutView.html" label="Salmos" icon="ion-ios-book" active="true" style="width: 55px; top: 10px" persistent>
+                <ons-icon icon="ion-android-contacts" style="font-size: 26px;"><div style="font-size: 10px;">Nosotros</div></ons-icon>
+            </ons-tab>
 
-          
+
+
         </ons-tabbar>
         
 </ons-page>
