my-day-app: psalm formatting

--- a/my-promises/platforms/browser/www/app/components/main/principalView.html
+++ b/my-promises/platforms/browser/www/app/components/main/principalView.html
@@ -13,19 +13,18 @@
                 <ons-icon icon="md-menu"></ons-icon>
               </ons-toolbar-button>
             </div>
-            <div class="center">Promesas</div>
+            <div class="center">Mi día</div>
 
         </ons-toolbar>
         
         <ons-tabbar position="bottom">
-          <ons-tab page="app/components/promise/promiseView.html" label="Home" icon="fa-home" active="true" style="width: 55px; top: 10px" persistent>
-              <ons-icon icon="fa-home" style="font-size: 26px;"><div style="font-size: 10px;">Inicio</div></ons-icon>
-              <span class="smallNotification" style="left: -10px;" data-ng-show="newCheckins > 0"></span>
+          <ons-tab page="app/components/promise/promiseView.html" label="Promesas" icon="fa-home" active="true" style="width: 55px; top: 10px" persistent>
+              <ons-icon icon="fa-home" style="font-size: 26px;"><div style="font-size: 10px;">Promesas</div></ons-icon>
           </ons-tab>
         <ons-tab page="app/components/psalm/psalmView.html" label="Salmos" icon="ion-ios-book" active="true" style="width: 55px; top: 10px" persistent>
             <ons-icon icon="ion-ios-book" style="font-size: 26px;"><div style="font-size: 10px;">Salmos</div></ons-icon>
         </ons-tab>
-            <ons-tab page="app/components/about/aboutView.html" label="Salmos" icon="ion-ios-book" active="true" style="width: 55px; top: 10px" persistent>
+            <ons-tab page="app/components/about/aboutView.html" label="Nosotros" icon="ion-android-contacts" active="true" style="width: 55px; top: 10px" persistent>
                 <ons-icon icon="ion-android-contacts" style="font-size: 26px;"><div style="font-size: 10px;">Nosotros</div></ons-icon>
             </ons-tab>
 
