--- a/my-promises/platforms/browser/www/app/components/promise/promiseView.html
+++ b/my-promises/platforms/browser/www/app/components/promise/promiseView.html
@@ -2,7 +2,7 @@
    <ons-toolbar>
       <div class="center">
          <ons-toolbar-button data-ng-click="reloadPromise()">
-            <ons-icon icon="ion-load-c" ></ons-icon> Recargar
+            <ons-icon icon="ion-load-c" ></ons-icon> Promesas
          </ons-toolbar-button>
       </div>
    </ons-toolbar>
