--- a/my-promises/platforms/android/assets/www/app/components/main/menuView.html
+++ b/my-promises/platforms/android/assets/www/app/components/main/menuView.html
@@ -2,4 +2,5 @@
     <ons-toolbar>
         <div class="center">Ajustes</div>
     </ons-toolbar>
+    <div class="settings-header"></div>
 </ons-page>
