my-day-app: Social Sharing

--- a/my-promises/www/app/components/about/aboutView.html
+++ b/my-promises/www/app/components/about/aboutView.html
@@ -37,6 +37,15 @@
     </ons-row>
     <ons-row>
         <ons-col>
+            <ons-list>
+                <ons-list-item>
+                    <ons-icon icon="ion-card"><div style="font-size: 10px;">Contribuir</div></ons-icon>
+                </ons-list-item>
+            </ons-list>
+        </ons-col>
+    </ons-row>
+    <ons-row>
+        <ons-col>
             <div>
                 <span style="text-align: justify">
                         Y en respuesta les dije: El Dios de los cielos, él nos prosperará, y nosotros sus siervos nos levantaremos y edificaremos, porque vosotros no tenéis parte ni derecho ni memoria en Jerusalén.
