--- a/my-promises/www/app/components/psalm/psalmView.html
+++ b/my-promises/www/app/components/psalm/psalmView.html
@@ -16,7 +16,7 @@
         <ons-list-item class="person" ng-repeat="i in cat.children">
             <ons-row>
                 <ons-col width="40px">
-                    <img src="https://www.gravatar.com/avatar/e15547719d80f1a93a4c3a037a76935a?s=128&d=identicon&r=PG" class="person-image">
+                    <img src="assets/img/bookmark-xxl.png" class="person-image">
                 </ons-col>
                 <ons-col class="person-name">
                     <span data-ng-click="toOpen(i)">{{i.title}}</span>
