--- a/my-promises/www/app/components/main/principalView.html
+++ b/my-promises/www/app/components/main/principalView.html
@@ -8,11 +8,11 @@
     </ons-modal>
         
         <ons-toolbar>
-            <div class="left">
-              <ons-toolbar-button ng-click="app.menu.toggleMenu()" style="font-size: 24px;">
-                <ons-icon icon="md-menu"></ons-icon>
-              </ons-toolbar-button>
-            </div>
+            <!--<div class="left">-->
+              <!--<ons-toolbar-button ng-click="app.menu.toggleMenu()" style="font-size: 24px;">-->
+                <!--<ons-icon icon="md-menu"></ons-icon>-->
+              <!--</ons-toolbar-button>-->
+            <!--</div>-->
             <div class="center">Mi día</div>
 
         </ons-toolbar>
