my-day-app: Latin version

--- a/my-promises/www/app/components/promise/promiseView.html
+++ b/my-promises/www/app/components/promise/promiseView.html
@@ -19,8 +19,9 @@
    <ons-row>
      <ons-col>
         <ons-row>
-           <!-- todo Buscar la manera de compartir-->
+          <ons-col></ons-col>
            <ons-col><ons-icon icon="ion-android-share-alt" data-ng-click="ShareNative(promise.text)"></ons-icon></ons-col>
+           <ons-col></ons-col>
         </ons-row>
      </ons-col>
    </ons-row>
