my-day-app: Latin version

--- a/my-promises/www/app/components/about/aboutView.html
+++ b/my-promises/www/app/components/about/aboutView.html
@@ -35,15 +35,15 @@
             </ons-list>
         </ons-col>
     </ons-row>
-    <ons-row>
-        <ons-col>
-            <ons-list>
-                <ons-list-item>
-                    <ons-icon icon="ion-card"><div style="font-size: 10px;">Contribuir</div></ons-icon>
-                </ons-list-item>
-            </ons-list>
-        </ons-col>
-    </ons-row>
+    <!--<ons-row>-->
+        <!--<ons-col>-->
+            <!--<ons-list>-->
+                <!--<ons-list-item>-->
+                    <!--<ons-icon icon="ion-card"><div style="font-size: 10px;">Contribuir</div></ons-icon>-->
+                <!--</ons-list-item>-->
+            <!--</ons-list>-->
+        <!--</ons-col>-->
+    <!--</ons-row>-->
     <ons-row>
         <ons-col>
             <div>
